Fix: Fixed sumenu goes out of screen issue

--- a/assets/css/unminified/frontend.css
+++ b/assets/css/unminified/frontend.css
@@ -3431,7 +3431,7 @@ body .entry-content .wp-block-latest-posts li {
 }
 
 .ast-account-nav-menu {
-  width: 240px;
+  width: 260px;
   background: #fff;
   left: -999em;
   position: absolute;
@@ -3455,8 +3455,14 @@ body .entry-content .wp-block-latest-posts li {
 
 .ast-header-account-wrap.focus .ast-account-nav-menu,
 .ast-header-account-wrap:hover .ast-account-nav-menu {
+  right: -100%;
+  left: auto;
+}
+
+.site-header-section-left .ast-header-account-wrap.focus .ast-account-nav-menu,
+.site-header-section-left .ast-header-account-wrap:hover .ast-account-nav-menu {
+  left: -100%;
   right: auto;
-  left: 0;
 }
 
 .ast-account-nav-menu .menu-item.focus > .sub-menu,
