--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -337,7 +337,7 @@
     box-shadow: 0 4px 10px -2px rgba(0,0,0,.1);
 }
 .ast-account-nav-menu {
-	width: 240px;
+	width: 260px;
     background: #fff;
     left: -999em;
     position: absolute;
@@ -359,8 +359,13 @@
 }
 .ast-header-account-wrap.focus .ast-account-nav-menu,
 .ast-header-account-wrap:hover .ast-account-nav-menu {
-    right: auto;
-	left: 0;
+    right: -100%;
+	left: auto;
+}
+.site-header-section-left .ast-header-account-wrap.focus .ast-account-nav-menu,
+.site-header-section-left .ast-header-account-wrap:hover .ast-account-nav-menu {
+    left: -100%;
+	right: auto;
 }
 .ast-account-nav-menu .menu-item.focus > .sub-menu,
 .ast-account-nav-menu .menu-item:hover > .sub-menu {
